$Id: RELEASE_NOTES.txt,v 1.16 2006/03/01 01:52:03 gregluck Exp $


Release Notes For ehcache-debugger
==================================

See http://ehcache.sourceforge.net/documentation/remotedebugger.html for full documentation including installation and configuration.

For the impatient:

java -jar ehcache-1.5-remote-debugger.jar path_to_ehcache.xml cacheToMonitor

