@@ -16,11 +16,20 @@ Welcome to ehcache
 
 * Latest News
 
-* 12 July 2008: ehcache-1.5.0 released
+** 12 July 2009: ehcache-server-0.1 released
 
-   Ehcache 1.5.0 provides a couple of fixes to changes made in beta1. If you are testing 1.5 please use this version.
+   This is the first version of an ehcache W3C Web Services server, packaged as a WAR. This version is made available for testing.
+   See the {{{http://ehcache.sourceforge.net/documentation/cache_server.html}documentation}}. A standalone version is also coming.
 
-** New Features
+** 12 July 2009: ehcache-debugger-1.5.0 released
+
+   This is a standalone ehcache debugger used to monitor RMI cache clusters. It is available from Maven central or the downloads page.
+
+** 12 July 2008: ehcache-1.5.0 released
+
+   Ehcache 1.5.0 is a major new release. 
+
+*** New Features
 
     * Added JGroups Implementation. Thanks to Pierre Monestie for the patch(es) for this. Though new to the
       core distribution JGroups replication has been in production use in a large cluster for the last year.
@@ -60,8 +69,11 @@ Welcome to ehcache
       The new version prints a list of caches with replication configured, prints notifications as they
       happen, and periodically prints the cache name, size and total events received.
 
+      Note that the debugger is gaining more attention and is now distributed in its own tar ball. It has also moved to its own
+      pure maven build and has additional testing.
 
-**   Summary of Bug Fixes
+
+***   Summary of Bug Fixes
 
     * CachingFilter bug fixes for various rare edge conditions
 
@@ -72,11 +84,11 @@ Welcome to ehcache
 
     See the {{{http://ehcache.sourceforge.net/changes-report.html#1.5.0}changelog}} for complete details.
 
-* 7 June 2008: ehcache-1.5.0-beta2 release
+** 7 June 2008: ehcache-1.5.0-beta2 release
 
    Ehcache 1.5.0-beta2 provides a couple of fixes to changes made in beta1. If you are testing 1.5 please use this version.
 
-* 13 May 2008: ehcache-1.5.0-beta1 release
+** 13 May 2008: ehcache-1.5.0-beta1 release
 
    Ehcache 1.5.0-beta1 provides a host of new features and a few bug fixes. (See the ehcache-1.5.0 final release news item).
 
